--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 body {
-  font-family: 'Open Sans Condensed'
+  font-family: 'Open Sans Condensed';
+  padding: 80px 20px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
