--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 body {
   font-family: 'Open Sans Condensed';
-  padding: 80px 20px;
+  padding: 20px 30px;
 }
 
 a {
   text-decoration: none;
   color: black;
+}
+
+* {
+  box-sizing: border-box;
 }
